// Original file: src/protos/4/company.proto


export interface Create {
  'companyName'?: (string);
  'companyIdentification'?: (string);
  'companyKey'?: (string);
  'cityId'?: (string);
  'addressId'?: (string);
}

export interface Create__Output {
  'companyName': (string);
  'companyIdentification': (string);
  'companyKey': (string);
  'cityId': (string);
  'addressId': (string);
}
