// Original file: src/protos/4/company.proto


export interface Update {
  'id'?: (string);
  'companyName'?: (string);
  'companyIdentification'?: (string);
  'companyKey'?: (string);
  'cityId'?: (string);
  'addressId'?: (string);
}

export interface Update__Output {
  'id': (string);
  'companyName': (string);
  'companyIdentification': (string);
  'companyKey': (string);
  'cityId': (string);
  'addressId': (string);
}
